Server/server-runtime.log

> resumax-server@1.0.0 dev
> nodemon server.js

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (D:\Emerging Tech\ai-resume-analyzer\Server\node_modules\body-parser\lib\types\json.js:92:19)
    at D:\Emerging Tech\ai-resume-analyzer\Server\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:214:14)
    at invokeCallback (D:\Emerging Tech\ai-resume-analyzer\Server\node_modules\raw-body\index.js:238:16)
    at done (D:\Emerging Tech\ai-resume-analyzer\Server\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (D:\Emerging Tech\ai-resume-analyzer\Server\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:508:28)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)
[32m[nodemon] restarting child process[39m
[32m[nodemon] starting `node server.js`[39m
Server running on port 5001
Connected to MongoDB
^C^C